having the endpoints for the graphs
